fixed recharging order
